After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737602 - ATK_STATE_INDETERMINATE should apply to more than just tri-state checkboxes
ATK_STATE_INDETERMINATE should apply to more than just tri-state checkboxes
Status: RESOLVED FIXED
Product: atk
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: ATK maintainer(s)
ATK maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-09-29 16:08 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2014-09-29 16:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (2.36 KB, patch)
2014-09-29 16:08 UTC, Joanmarie Diggs (IRC: joanie)
committed Details | Review

Description Joanmarie Diggs (IRC: joanie) 2014-09-29 16:08:27 UTC
Created attachment 287368 [details] [review]
proposed patch

According to the documentation, ATK_STATE_INDETERMINATE is specifically to indicate a tri-state checkbox is partially checked. That seems to be awfully specific and prevents it from addressing issues such as a large data set whose size is unknown and cannot (easily, immediately) be known. Example: Gmail's "1 of about 120". We don't need new API for the set size; we need docs that give implementors permission to use this state for that case.

I'm attaching a patch which adds that case as an example, and trims what seems like an unnecessary amount of explanation for the tri-state case.
Comment 1 Alejandro Piñeiro Iglesias (IRC: infapi00) 2014-09-29 16:11:11 UTC
Review of attachment 287368 [details] [review]:

Looks good.
Comment 2 Joanmarie Diggs (IRC: joanie) 2014-09-29 16:16:36 UTC
Comment on attachment 287368 [details] [review]
proposed patch

Thanks!

https://git.gnome.org/browse/atk/commit/?id=99d07a8