Update documentation to reflect an additional use case for STATE_INDETERMINATE

https://bugzilla.gnome.org/show_bug.cgi?id=737602